# NopeNet

./: .gitignore  .replit  CHANGELOG.md  LICENSE  README.md  SETUP.md  create_models.py  download_models.py  intrusion_detector.py  ml_ensemble.py  package-lock.json  preprocess.py  pyproject.toml  theme.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
attached_assets/: Pasted-Below-is-a-comprehensive-outline-that-gathers-all-the-information-and-design-elements-you-ve-provide-1742615350201.txt  Pasted-The-above-error-occurred-in-the-TextPressure-component-at-TextPressure-https-52f69e6c-7-1743295652656.txt  Pasted-Warning-Each-child-in-a-list-should-have-a-unique-quot-key-quot-prop-Check-the-render-method--1743279591680.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/backgrounds/: GlitchBackground.tsx  MagneticLines.tsx  NoiseBackground.tsx
client/src/components/effects/: ClickSpark.tsx  SpotlightCard.tsx  StarBorder.tsx
client/src/components/layout/: Footer.tsx  TopNavigation.tsx
client/src/components/scan/: ScanDialog.tsx
client/src/components/text/: ASCIIText.tsx  CountUp.tsx  GradientText.tsx  ShinyText.tsx  TextPressure.tsx
client/src/components/ui/: cybercard.tsx
client/src/lib/: queryClient.ts
client/src/pages/: assistant.tsx  dashboard.tsx  dataset.tsx  education.tsx  home.tsx  intrusions.tsx  manual-input.tsx
models/: decision_tree_model.pkl  models_list.txt  svm_intrusion_model.pkl
models/rf/: random_forest_kdd99_model.pkl
server/: routes.ts  storage.ts
shared/: schema.ts
(+7 files in other folders)
